metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Manual_O2C__c.field-meta.xml
<CustomField>
    <fullName>Manual_O2C__c</fullName>
    <description>Tells if O2C processing for this Opp has to be done manually.  Logic: 
If it&apos;s NOT Renewal OR Product family O2C not automated OR it&apos;s a Co-Term Opp OR multiple primary products on this quote OR if we are Finalizing a Won Opp and Quote was not automatically generated OR Billing Type is not &quot;Advance&quot; OR Handled by BU is TRUE
NOTE: UPDATE THE FLOW NAMED &apos;On Opportunity Update, Moves to Finalizing and Sets internal fields&apos; IF YOU UPDATE THE LOGIC OF THIS FIELD</description>
    <formula>Product_Configuration__r.Manual_Quote__c || !(ISPICKVAL(Type, &quot;Renewal&quot;) || ISPICKVAL(Type, &quot;New Business&quot;) || ISPICKVAL(Type, &quot;Upsell&quot;)) || ISPICKVAL(Win_Type__c, &quot;Co-Term&quot;) ||  Co_Term_Related_Opportunities_Count__c &gt; 0 || (Product_Bundles_Count__c != 1 &amp;&amp; !ISBLANK(Product_Bundles_Count__c)) || (ISPICKVAL(StageName,&quot;Finalizing&quot;) &amp;&amp; !ISPICKVAL(Win_Type__c,&quot;&quot;) &amp;&amp; ISBLANK(SBQQ__PrimaryQuote__r.NetSuite_ID__c)) || !ISPICKVAL(SBQQ__PrimaryQuote__r.Billing_Type__c, &quot;Advance&quot;) || Process_O2C_Manually__c || (!ISBLANK(Opportunity_Term__c) &amp;&amp; MOD(Opportunity_Term__c,12) != 0) || Handled_by_BU__c</formula>
    <inlineHelpText>If checked, the quote and invoice automation will not run for this opportunity. You will need to process it manually.</inlineHelpText>
    <label>Manual O2C</label>
    <type>Checkbox</type>
</CustomField>