metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Master_Products_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Master_Products_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>SUM([OpportunityProduct where Product.ChargeType = Recurring and Product.Edition != Add-On and Total Price &gt; 0].Quantity)</description>
    <inlineHelpText>The total quantity of non zero priced, recurring, and non add-on products on the opportunity</inlineHelpText>
    <label>Master Products Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>