metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Migrated_Aurea_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Aurea_SF_ID__c</fullName>
    <description>Opportunity ID in the Aurea SFDC</description>
    <externalId>true</externalId>
    <inlineHelpText>Opportunity ID in the Aurea SFDC</inlineHelpText>
    <label>Migrated Aurea SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>