metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Migrated_Aurea_Type__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Aurea_Type__c</fullName>
    <description>Type of this Opportunity in Aurea SFDC. Used as a backup and reference.</description>
    <inlineHelpText>Type of this Opportunity in Aurea SFDC.</inlineHelpText>
    <label>Migrated Aurea Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>