metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Migrated_IgniteTech_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Migrated_IgniteTech_SF_ID__c</fullName>
    <description>ID of the opportunity in IgniteTech SFDC</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the opportunity in IgniteTech SFDC</inlineHelpText>
    <label>Migrated IgniteTech SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>