metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Monthly cost of recurring items from the Opportunity Products. Used for Reporting. Calculated by the OnOpportunityUpdate flow</description>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>