metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/NDR__c.field-meta.xml
<CustomField>
    <fullName>NDR__c</fullName>
    <description>Net Dollar Retention of this opportunity.</description>
    <formula>ARR__c/Current_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Dollar Retention: out goal is 125% for Standard, 135% for Gold, 145% for Platinum success.</inlineHelpText>
    <label>NDR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>