metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/NDR_Below_Target__c.field-meta.xml
<CustomField>
    <fullName>NDR_Below_Target__c</fullName>
    <description>Returns a text value &quot;true&quot; if NDR uplift is below 25/35/45, otherwise returns &quot;false&quot;.  CASE formula does not allow returning boolean true/false.</description>
    <formula>CASE(Success_Level__c,
&quot;Platinum&quot;, IF(round(NDR__c,2) &lt; 1.45,&quot;true&quot;,&quot;false&quot;),
&quot;Gold&quot;, IF(round(NDR__c,2) &lt; 1.35,&quot;true&quot;,&quot;false&quot;),
&quot;Standard&quot;, IF(round(NDR__c,2) &lt; 1.25,&quot;true&quot;,&quot;false&quot;),
&quot;true&quot;)</formula>
    <label>NDR Below Target</label>
    <type>Text</type>
</CustomField>