metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/NDR_Warning__c.field-meta.xml
<CustomField>
    <fullName>NDR_Warning__c</fullName>
    <description>Show a warning signal when the NDR is below the expected threshold</description>
    <formula>IMAGE(
IF( NDR_Below_Target__c = &quot;true&quot; ,&quot;/img/samples/color_red.gif&quot;,&quot;/img/samples/color_green.gif&quot;),
&quot;Color&quot;, 20,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Red when the NDR is below 125% for Standard, 135% for Gold, 145% for Platinum success.</inlineHelpText>
    <label>NDR Warning</label>
    <type>Text</type>
</CustomField>