metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>ID of the NetSuite renewal subscription associated with this opportunity. If matches &quot;O-&lt;ID&gt;&quot; then the ID points to NetSuite Opportunity record instead.</inlineHelpText>
    <label>NetSuite ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>