metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Next_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Date__c</fullName>
    <description>Next contact date agreed with the client.</description>
    <inlineHelpText>Next contact date agreed with the client.</inlineHelpText>
    <label>Next Follow Up Date</label>
    <type>Date</type>
</CustomField>