metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Next_Renewal_Opp__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>On Proactive Win-Back Opps, this is the field to contain the next renewal opp.  For automation to utilize when PWB Opp is closed, to deliver system message on the renewal opp here what the outcome was of the PWB work unit</description>
    <inlineHelpText>The upcoming at-risk renewal opp that the PWB work unit is trying to proactively save from churning</inlineHelpText>
    <label>Next Renewal Opp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Next Renewal Opp)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>