metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/NPS_Details__c.field-meta.xml
<CustomField>
    <fullName>NPS_Details__c</fullName>
    <description>Field migrated from IgniteTech: NPS Details</description>
    <inlineHelpText>Field migrated from IgniteTech: NPS Details</inlineHelpText>
    <label>NPS Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>