metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/O2C_Record__c.field-meta.xml
<CustomField>
    <fullName>O2C_Record__c</fullName>
    <description>URL to the DELIVERED O2C Invoice Request ticket if Won or Record Maintenance ticket if Lost.</description>
    <inlineHelpText>URL to the DELIVERED O2C Invoice Request ticket if Won or O2C Record Maintenance ticket if Lost/Won&apos;t Process/Co-Term.</inlineHelpText>
    <label>Final O2C Record</label>
    <type>Url</type>
</CustomField>