metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Objections__c.field-meta.xml
<CustomField>
    <fullName>Objections__c</fullName>
    <description>Objections and how objections were handled, identified by sales</description>
    <inlineHelpText>What objections did you come across and how did you handle and overcome them?</inlineHelpText>
    <label>Objections</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>