metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/of_Platinum_Delivery_Service_Records__c.field-meta.xml
<CustomField>
    <fullName>of_Platinum_Delivery_Service_Records__c</fullName>
    <description>LAMBDA-60084 Count of Platinum Service Delivery Status records related to this opportunity</description>
    <inlineHelpText>Count of Platinum Service Delivery records related to this opportunity</inlineHelpText>
    <label># of Platinum Delivery Service Records</label>
    <summaryForeignKey>Platinum_Service_Delivery__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>