metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/of_Unlimited_Closed_Won_Deals_CQ__c.field-meta.xml
<CustomField>
    <fullName>of_Unlimited_Closed_Won_Deals_CQ__c</fullName>
    <description>Field migrated from IgniteTech: # of Unlimited Closed Won Deals (CQ)</description>
    <inlineHelpText>Field migrated from IgniteTech: # of Unlimited Closed Won Deals (CQ)</inlineHelpText>
    <label># of Unlimited Closed Won Deals (CQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>