metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Offer_ARR__c.field-meta.xml
<CustomField>
    <fullName>Offer_ARR__c</fullName>
    <formula>/*IF( 
  ISPICKVAL(Win_Type__c, &apos;Auto-Renew&apos;),
  Offer_Quote__r.Quote_Arr__c, 
  ARR__c
)*/

IF(
NOT(ISBLANK(SBQQ__PrimaryQuote__c)) &amp;&amp; SBQQ__PrimaryQuote__c == AR_Quote__c  &amp;&amp;  NOT(ISBLANK(Offer_Quote__c)), 
Offer_Quote__r.Quote_ARR__c,
IF(
NOT(ISBLANK(SBQQ__PrimaryQuote__c)) &amp;&amp; SBQQ__PrimaryQuote__c == AR_Quote__c  &amp;&amp;  ISBLANK(Offer_Quote__c),
Uptick__c,
ARR__c))</formula>
    <inlineHelpText>If it&apos;s an auto-renewal - show the ARR from the offer quote.</inlineHelpText>
    <label>Offer ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>