metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Offer_Quote__c.field-meta.xml
<CustomField>
    <fullName>Offer_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>We have two quotes: 1) Offer quote - what we want the customer to sign. 2) Auto-Renewal quote - what will be the default pricing if the customer doesn&apos;t sign. This field stores a reference to the Offer Quote.</description>
    <inlineHelpText>We have two quotes: 1) Offer quote - what we want the customer to sign. 2) Auto-Renewal quote - what will be the default pricing if the customer doesn&apos;t sign. This field stores a reference to the Offer Quote.</inlineHelpText>
    <label>Offer Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Opportunities (Offer Quote)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>