metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Opportunity_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity 18 Digit Id</label>
    <type>Text</type>
</CustomField>