metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Opportunity_Term__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Term__c</fullName>
    <description>max term of the opportunity renewal products non Add-On with Total Price &gt; 0</description>
    <inlineHelpText>Term of the subscription after renewal (max term of none zero renewable price opportunity products that are not Add-On)</inlineHelpText>
    <label>Opportunity Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>