metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent/Renewed Opportunity

This is to get details like Customer Sentiment, AR Scenario and other details from Renewed Opportunity</description>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Parent Opportunity)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>