metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Parent_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Subscription_ID__c</fullName>
    <description>A valid NetSuite or Zuora (for Kayako) subscription number of the parent/renewed subscription.</description>
    <inlineHelpText>A valid NetSuite or Zuora (for Kayako) subscription number of the parent/renewed subscription.</inlineHelpText>
    <label>Parent Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>