metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Parent_Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Subscription_Name__c</fullName>
    <label>Parent Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>