metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Platinum_Service_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Service_Delivered__c</fullName>
    <label># Platinum Service Delivered</label>
    <summaryFilterItems>
        <field>Platinum_Service_Delivery__c.Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Platinum_Service_Delivery__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>