metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Platinum_Service_Delivered_N__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Service_Delivered_N__c</fullName>
    <description>Number field to store the No of Service Delivered. This field will be used as Rollup on Account to calculate No of Services delivered on on an Account</description>
    <label>Platinum Service Delivered N</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>