metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/PostGrid_Letter_Link__c.field-meta.xml
<CustomField>
    <fullName>PostGrid_Letter_Link__c</fullName>
    <description>Field to store PostGrid Letter Link</description>
    <inlineHelpText>Field to store PostGrid Letter Link</inlineHelpText>
    <label>PostGrid Letter Link AR 40</label>
    <type>Url</type>
</CustomField>