metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/PostGrid_Letter_Link_AR_20__c.field-meta.xml
<CustomField>
    <fullName>PostGrid_Letter_Link_AR_20__c</fullName>
    <label>PostGrid Letter Link AR 20</label>
    <type>Url</type>
</CustomField>