metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Predicted_Score__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Score__c</fullName>
    <label>Predicted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>