metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Previous_Quote_with_AR_clause__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quote_with_AR_clause__c</fullName>
    <description>This field must be populated when the win type is Auto-Renewal with the previously signed quote containing the AR clause.</description>
    <inlineHelpText>In order to Auto-Renew we must have a previous signed contract/quote with an AR clause. Please provide a link to it. 
If attached to an opportunity (could be a previous opportunity), copy the salesforce document URL and paste in this field.
e.g. https://trilogy-sales.lightning.force.com/lightning/r/ContentDocument/0692x00000CD3PAAA1/view</inlineHelpText>
    <label>Previously Signed Quote with AR Clause</label>
    <type>Url</type>
</CustomField>