metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Previous_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Previous_Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This linked opportunity is the previous Closed Won renewal opportunity that identified that the customer is unhappy and at risk to churn</description>
    <inlineHelpText>This is the previous renewal that revealed the customer sentiment that they are considering cancelling next renewal</inlineHelpText>
    <label>Previous Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Proactive Win-Back &amp; AI Pre-Sale)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>