metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Price_Budget__c.field-meta.xml
<CustomField>
    <fullName>Price_Budget__c</fullName>
    <description>Green: Alignment on Price &amp; Business case (savings report)
||
Yellow: Budget challenges &amp;/or murky business case due to savings report
||
Red: No business case - price Not In Range based on savings</description>
    <inlineHelpText>Green: Alignment on Price &amp; Business case (savings report)
||
Yellow: Budget challenges &amp;/or murky business case due to savings report
||
Red: No business case - price Not In Range based on savings</inlineHelpText>
    <label>Price &amp; Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Progression</valueSetName>
    </valueSet>
</CustomField>