metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Price_Reset__c.field-meta.xml
<CustomField>
    <fullName>Price_Reset__c</fullName>
    <description>LAMBDA-47566 &gt; indicates that Price Reset applied to the opportunity product</description>
    <inlineHelpText>Select if Price Reset is being done on this opportunity (i.e. not the usual 25/35/45)</inlineHelpText>
    <label>Price Reset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price Reset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>