metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LAMBDA-61221 Primary contact sync from the Opportunity Contact role</description>
    <inlineHelpText>Primary Contact derived from related Opportunity Contact Role</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>