metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Primary_Contact_Changed__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Changed__c</fullName>
    <description>Date when the Primary contact was changed or set</description>
    <label>Primary Contact Changed</label>
    <type>DateTime</type>
</CustomField>