metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Primary_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Loss_Reason__c</fullName>
    <description>Select the main reason for the cancellation/loss</description>
    <inlineHelpText>Required when moving stage to closed lost</inlineHelpText>
    <label>Primary Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Loss_Reason</valueSetName>
    </valueSet>
</CustomField>