metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Primary_Loss_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Loss_Sub_Category__c</fullName>
    <description>choose a secondary reason when moving to closed lost stage</description>
    <inlineHelpText>required feild</inlineHelpText>
    <label>Primary Loss Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Primary_Loss_Sub_Category</valueSetName>
    </valueSet>
</CustomField>