metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Prime_ARR_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Prime_ARR_Utilized__c</fullName>
    <description>This is the total amount of entitlement for this opportunity for the Primed Vertical</description>
    <inlineHelpText>Please enter the total amount of entitlement we are granting to the customer for the Primed Vertical</inlineHelpText>
    <label>Prime ARR Utilized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>