metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <description>Priority score calculated based on Health Score, Account ARR and days to end contract.</description>
    <formula>IF(ISPICKVAL(Success_Level__c, &apos;Platinum&apos;),1/4,0) +
(1 - Health_Score__c) / 4 +
IF(Account.ARR__c &gt; 10000, 1/4, 0) +
IF(ISBLANK(ContractId),0, IF(Contract.EndDate - TODAY() &lt;= 0,1,MAX(0,(1 - (Contract.EndDate -  TODAY())/(365 * Contract.ContractTerm / 12))))) / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>