metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Process_O2C_Manually__c.field-meta.xml
<CustomField>
    <fullName>Process_O2C_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, disables O2C processing Tray.io flows and creates manual tasks for O2C processing.</description>
    <inlineHelpText>Check this box if this opportunity should have O2C processing (quotes and invoices) done manually.</inlineHelpText>
    <label>Process O2C Manually</label>
    <type>Checkbox</type>
</CustomField>