metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Process_O2C_Manually_Reason__c.field-meta.xml
<CustomField>
    <fullName>Process_O2C_Manually_Reason__c</fullName>
    <description>LAMBDA-46020 Reason field required required to populate the checkbox</description>
    <inlineHelpText>Why was &quot;Process O2C Manually&quot; selected? Why do we need to process O2C for this opportunity manually?</inlineHelpText>
    <label>Process O2C Manually Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>