metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>&apos;Product Family&apos; is required, please refer PB001 for details.</inlineHelpText>
    <label>Product Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Families</valueSetName>
    </valueSet>
</CustomField>