metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product_Bundles_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundles_Count__c</fullName>
    <description>Number of product bundles on this opportunity.</description>
    <inlineHelpText>Number of product bundles on this opportunity. This is automatically filled by OnOpportunityUpdate flow.</inlineHelpText>
    <label>Product Bundles Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>