metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Configuration</label>
    <referenceTo>Product_Configuration__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>