metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product_Custom_Data__c.field-meta.xml
<CustomField>
    <fullName>Product_Custom_Data__c</fullName>
    <description>Product-specific data taken from incoming lead forms. Gets copied to the opportunity with Lead conversion.</description>
    <inlineHelpText>Product-specific data taken from incoming lead forms. Gets copied to the opportunity with Lead conversion.</inlineHelpText>
    <label>Product Custom Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>