metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product_Fit__c.field-meta.xml
<CustomField>
    <fullName>Product_Fit__c</fullName>
    <description>Green: Buy-in on savings report value &amp; Clear differentiation &amp; Passed security and compliance
||
Yellow: Wants to see move savings or Thinks other tools can do it or Unsatisfied security issues
||
Red: We’ve failed Technical / Security review or customer not excited by Savings Report</description>
    <inlineHelpText>Green: Buy-in on savings report value &amp; Clear differentiation &amp; Passed security and compliance
||
Yellow: Wants to see move savings or Thinks other tools can do it or Unsatisfied security issues
||
Red: We’ve failed Technical / Security review or customer not excited by Savings Report</inlineHelpText>
    <label>Product Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opportunity_Progression</valueSetName>
    </valueSet>
</CustomField>