metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product_Names__c.field-meta.xml
<CustomField>
    <fullName>Product_Names__c</fullName>
    <description>LAMBDA-61488 field to store product description of all related bundles to be used in outgoing &quot;late renewal&quot; emails.</description>
    <inlineHelpText>Product descriptions of all bundles</inlineHelpText>
    <label>Product Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>