metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product_Solution_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution_Service_Name__c</fullName>
    <label>Product / Solution / Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AES Customer Engagement Platform</fullName>
            </value>
            <value>
                <fullName>AlertFind</fullName>
            </value>
            <value>
                <fullName>AlertFind Add On</fullName>
            </value>
            <value>
                <fullName>Artemis 9000</fullName>
            </value>
            <value>
                <fullName>Artemis Views</fullName>
            </value>
            <value>
                <fullName>Ask Me Anything</fullName>
            </value>
            <value>
                <fullName>Aurea Clinical Solutions</fullName>
            </value>
            <value>
                <fullName>Aurea Cloud Integration Hub</fullName>
            </value>
            <value>
                <fullName>Aurea Collaborative Enterprise</fullName>
            </value>
            <value>
                <fullName>Aurea Compliance Manager</fullName>
            </value>
            <value>
                <fullName>Aurea CRM</fullName>
            </value>
            <value>
                <fullName>Aurea CRM Add On</fullName>
            </value>
            <value>
                <fullName>Aurea Distribution Channel Management</fullName>
            </value>
            <value>
                <fullName>Aurea DXSI</fullName>
            </value>
            <value>
                <fullName>Aurea Library Subscription</fullName>
            </value>
            <value>
                <fullName>Aurea Messenger</fullName>
            </value>
            <value>
                <fullName>Aurea Monitor</fullName>
            </value>
            <value>
                <fullName>Aurea Planning Solutions</fullName>
            </value>
            <value>
                <fullName>Aurea Playbooks</fullName>
            </value>
            <value>
                <fullName>Aurea Portal Management</fullName>
            </value>
            <value>
                <fullName>Aurea Process</fullName>
            </value>
            <value>
                <fullName>Aurea Pulse</fullName>
            </value>
            <value>
                <fullName>Aurea Quality Management Solutions</fullName>
            </value>
            <value>
                <fullName>Aurea Regulatory Solutions</fullName>
            </value>
            <value>
                <fullName>Aurea Social</fullName>
            </value>
            <value>
                <fullName>Aurea Store Management</fullName>
            </value>
            <value>
                <fullName>Aurea Store Management Add On</fullName>
            </value>
            <value>
                <fullName>Auto Configuration Management</fullName>
            </value>
            <value>
                <fullName>Bonzai</fullName>
            </value>
            <value>
                <fullName>Campaign Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>