metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Migrated Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>