metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Proof_of_Work_URL__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Work_URL__c</fullName>
    <label>Proof of Work URL</label>
    <type>Url</type>
</CustomField>