metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Provisioning_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Ticket__c</fullName>
    <description>Link to the Support ticket to provision the entitlements resulting from this opportunity.</description>
    <inlineHelpText>Link to the Support ticket to provision the entitlements resulting from this opportunity.</inlineHelpText>
    <label>Provisioning Ticket</label>
    <type>Url</type>
</CustomField>