metadata/sf-prod/force-app/main/default/objects/Opportunity/fields/Provisioning_Ticket_Required__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Ticket_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a provisioning or deprovision ticket is required. This is set automatically by trayIO flow according to the product integration record configuration at the time subscription is activated/terminated.</description>
    <inlineHelpText>If a provisioning or deprovision ticket is required. This is set automatically by trayIO flow according to the product integration record configuration at the time subscription is activated/terminated.</inlineHelpText>
    <label>Provisioning Ticket Required</label>
    <type>Checkbox</type>
</CustomField>